--- a/assets/scss/modules/editor/_forms.scss
+++ b/assets/scss/modules/editor/_forms.scss
@@ -23,7 +23,12 @@
   padding-left: 1rem;
 }
 
-.form-fieldset {
-  border-left: 0.5rem solid #ddd;
+.form-collection {
+  border-left: 0.35rem solid #ddd;
+  padding-left: 1rem;
+}
+
+.form-set {
+  border-left: 0.25rem solid #d8d8d8;
   padding-left: 1rem;
 }
