--- a/templates/_macro/_macro.html.twig
+++ b/templates/_macro/_macro.html.twig
@@ -50,8 +50,17 @@
         {% endif %}
 
         {% set new_field %}
-            {% include '@bolt/_partials/fields/' ~ item_field.type ~ '.html.twig' with
-                {'field': item_field, 'in_collection': true, 'is_first': loop.index0 == 0, 'is_last': loop.index == fields|length, 'name': collectionItemName, 'collection_name': collectionField.name, 'hash': hash } only %}
+            {% set context = {
+                'field': item_field,
+                'in_collection': true,
+                'is_first': loop.index0 == 0,
+                'is_last': loop.index == fields|length,
+                'name': collectionItemName,
+                'collection_name': collectionField.name,
+                'collection_label': collectionField.definition.label,
+                'hash': hash
+            } %}
+            {% include '@bolt/_partials/fields/' ~ item_field.type ~ '.html.twig' with context only %}
         {% endset %}
         {# set the label manually as set in _base.html.twig, to pass to Collection.vue for templates #}
         {% set label = item_field.definition.label|default(item_field.name|default('unnamed')|ucwords) %}
