--- a/templates/_partials/fields/_label.html.twig
+++ b/templates/_partials/fields/_label.html.twig
@@ -1,5 +1,5 @@
-{%- if type not in ['checkbox', 'collection'] -%}
-    <label for="{{ id }}">
+{%- if type != 'checkbox' -%}
+    <label for="{{ id }}" {% if type == 'collection' %}class="sr-only"{% endif %}>
 
         {%- if localize -%}
           <i class="fas fa-language"></i>
