--- a/templates/_partials/fields/filelist.html.twig
+++ b/templates/_partials/fields/filelist.html.twig
@@ -11,8 +11,8 @@
         'placeholder_alt_text': 'image.placeholder_alt_text'|trans,
         'placeholder_title': 'image.placeholder_title'|trans,
         'button_remove': 'image.button_remove'|trans,
-        'button_move_up': 'image.button_move_up'|trans,
-        'button_move_down': 'image.button_move_down'|trans,
+        'button_move_up': 'image.button_up'|trans,
+        'button_move_down': 'image.button_down'|trans,
         'add_new_file': 'file.add_new_file'|trans,
         'button_edit_attributes': 'image.button_edit_attributes'|trans,
     }|json_encode %}
