--- a/assets/scss/modules/base/_buttons.scss
+++ b/assets/scss/modules/base/_buttons.scss
@@ -5,3 +5,53 @@
 .btn-hidden-danger {
   @include button-variant($tertiary, $tertiary, darken($danger, 7.5%), darken($danger, 10%), darken($danger, 10%), darken($danger, 12.5%));
 }
+
+$theme-colors: (
+        "primary":   $primary,
+        "secondary": $secondary,
+        "tertiary":  $tertiary,
+        "success":   $success,
+        "info":      $info,
+        "warning":   $warning,
+        "danger":    $danger,
+        "light":     $light,
+        "dark":      $dark,
+        "boltblue":  $bolt-blue,
+);
+
+@each $color, $value in $theme-colors {
+  .alert-#{$color} {
+    background-color: theme-color-level($color, $alert-bg-level) !important;
+  }
+
+  .btn-#{$color} {
+    @include button-variant($value, $value);
+  }
+
+  .btn-outline-#{$color} {
+    @include button-outline-variant($value);
+  }
+}
+
+//set disabled buttons to grey
+
+.btn {
+  &.disabled,
+  &:disabled {
+    opacity: $btn-disabled-opacity;
+
+    @include box-shadow(none);
+
+    background: $disabled;
+    color: darken($disabled, 30%);
+    border: $btn-border-width solid transparent;
+  }
+}
+
+.btn-link {
+  &:disabled,
+  &.disabled {
+    color: darken($disabled, 30%);
+    background: transparent;
+  }
+}
