--- a/assets/scss/init/_variables.scss
+++ b/assets/scss/init/_variables.scss
@@ -68,7 +68,7 @@ $btn-padding-x: 0.6rem;
 
 $primary: #1863af;
 $secondary: #5da1ac;
-$tertiary: #81969B;
+$tertiary: #81969b;
 $success: #61a31f;
 $info: #17a2b8;
 $warning: #ffc107;
