--- a/templates/_partials/fields/filelist.html.twig
+++ b/templates/_partials/fields/filelist.html.twig
@@ -18,16 +18,14 @@
     }|json_encode %}
     {% set extensions = field.definition.get('extensions')|default('') %}
 
-    {% dump(field.rawvalue) %}
-
     <editor-filelist
-            :files='{{ field.rawvalue|json_encode }}'
-            :name='{{ name|json_encode }}'
-            :directory='{{ directory|json_encode }}'
-            :filelist='{{ filelist|json_encode }}'
-            :csrf-token='{{ csrf_token('upload')|json_encode }}'
-            :labels='{{ labels }}'
-            :extensions='{{  extensions|json_encode }}'
-            :attributes-link='{{ path('bolt_media_new')|json_encode }}'
+        :files='{{ field.jsonvalue }}'
+        :name='{{ name|json_encode }}'
+        :directory='{{ directory|json_encode }}'
+        :filelist='{{ filelist|json_encode }}'
+        :csrf-token='{{ csrf_token('upload')|json_encode }}'
+        :labels='{{ labels }}'
+        :extensions='{{  extensions|json_encode }}'
+        :attributes-link='{{ path('bolt_media_new')|json_encode }}'
     ></editor-filelist>
 {% endblock %}
