--- a/templates/helpers/_field_blocks.twig
+++ b/templates/helpers/_field_blocks.twig
@@ -16,17 +16,6 @@
     </div>
 {% endblock %}
 
-{# Sub-block for 'imagelist' fields #}
-{% block imagelist_field %}
-    <div class="bolt-imagelist">
-        {% for image in field %}
-            <div class="bolt-imageholder">
-                {{ popup(image.filename, 200, 0) }}
-            </div>
-        {% endfor %}
-    </div>
-{% endblock %}
-
 {# Block for "basic" fields like HTML, Markdown, Textarea and Text #}
 {% block common_fields %}
 
@@ -44,6 +33,13 @@
     {# Image fields #}
     {% if type == "image" and field is not empty %}
         {{ field|showimage('684') }}
+    {% endif %}
+
+    {# File fields #}
+    {% if type == "file" and field is not empty %}
+        <p>{{ __('general.phrase.download') }}:
+            <a href="{{ field }}">{{ field.title|default(field.filename) }}</a>
+        </p>
     {% endif %}
 
     {# Video fields #}
@@ -75,14 +71,9 @@
         <p><strong>{{ field|label }}</strong>: {{ field ? "checked" : "not checked" }}</p>
     {% endif %}
 
-    {# Imagelist fields #}
-    {% if type == "imagelist" and field is not empty %}
-        {{ block('imagelist_field') }}
-    {% endif %}
-
     {# No special case defined for this type of field. We just output them, if it's
        a simple scalar, and 'dump' them otherwise. #}
-    {% if type in [ 'filelist', 'datetime', 'date', 'integer', 'float' ] and field is not empty  %}
+    {% if type in ['datetime', 'date', 'integer', 'float' ] and field is not empty  %}
         <p><strong>{{ field|label }}: </strong>
             {% if field is iterable %}
                 {{ dump(field) }}
