--- a/templates/helpers/_fields.twig
+++ b/templates/helpers/_fields.twig
@@ -47,28 +47,31 @@
         {# Fields that are considered 'common': 'html', 'markdown', 'textarea',
            'text', 'image', 'video' and 'imagelist' #}
         {% if common|default(true) and (type not in exclude|default([])) %}
-
             {{ block('common_fields') }}
-
         {% endif %}
 
         {# The rest of the built-in types #}
         {% if extended|default(false) and (type not in exclude|default([])) %}
-
             {{ block('extended_fields') }}
-
         {% endif %}
 
         {# Finally, the collections, filelists and imagelists #}
-        {{ dump(type) }}
         {% if type in ['collection', 'filelist', 'imagelist'] %}
 
-            {{ dump(field.value) }}
-            {{ dump(field.getValue()) }}
-            {% for subfield in field %}
-            {{ dump(subfield) }}
+            {% for field in field.value %}
+                {% set type = field.type %}
+
+                {% if common|default(true) and (type not in exclude|default([])) %}
+                    {{ block('common_fields') }}
+                {% endif %}
+
+                {% if extended|default(false) and (type not in exclude|default([])) %}
+                    {{ block('extended_fields') }}
+                {% endif %}
+
             {% endfor %}
         {% endif %}
+
 
 
     {% endfor %}
