--- a/templates/helpers/_fields.twig
+++ b/templates/helpers/_fields.twig
@@ -56,19 +56,14 @@
         {% endif %}
 
         {# Finally, the collections, filelists and imagelists #}
-        {% if type in ['collection', 'filelist', 'imagelist'] and (type not in exclude|default([])) %}
+        {% if type in ['collection', 'filelist', 'imagelist', 'set'] and (type not in exclude|default([])) %}
 
-            {% for field in field.value %}
-                {% set type = field.type|default('foo') %}
-
-                {% if common|default(true) %}
-                    {{ block('common_fields') }}
-                {% endif %}
-
-                {% if extended|default(false) %}
-                    {{ block('extended_fields') }}
-                {% endif %}
-
+            {# @todo Make set return _just_ the array of fields for `.value` and `getValue()`. See issue #822 #}
+            {# note: For sets we need `field.value.fields`, hence the seemingly obtuse way to iterate over them #}
+            {% for field in field.value.fields|default(field.value) %}
+                {% set type = field.type %}
+                {{ block('common_fields') }}
+                {{ block('extended_fields') }}
             {% endfor %}
         {% endif %}
 
