A number of fixes for timezone handling, and the selectors in the editor.

--- a/templates/content/_fields_aside.html.twig
+++ b/templates/content/_fields_aside.html.twig
@@ -20,6 +20,7 @@
     {% include '@bolt/_partials/fields/date.html.twig' with {
         'label' : 'field.depublishedAt'|trans,
         'name' : 'depublishedAt',
+        'value' : record.depublishedAt,
         'mode' : 'datetime',
         'form' : 'editcontent'
     } %}
