remove Gedmo translation 2019 WIP

--- a/templates/content/_fields.html.twig
+++ b/templates/content/_fields.html.twig
@@ -3,10 +3,10 @@
     <div class="tab-pane {% if loop.first %}show active{% endif %}" id="{{ group|slug }}" role="tabpanel"
          aria-labelledby="{{ group|slug }}-tab">
         {% for key, fielddefinition in record.definition.fields|filter(fielddefinition => fielddefinition.group == group) %}
-            {% if record.hasField(key) %}
-                {% set field = record.getField(key)|translated(currentlocale) %}
+            {% if record.hasField(key, currentlocale) %}
+                {% set field = record.getField(key, currentlocale) %}
             {% else %}
-                {% set field = field_factory(key, fielddefinition) %}
+                {% set field = field_factory(key, currentlocale, fielddefinition) %}
             {% endif %}
 
             {% include [
