Working on Log Viewer

--- a/templates/pages/logviewer.html.twig
+++ b/templates/pages/logviewer.html.twig
@@ -2,7 +2,7 @@
 {% import '@bolt/_macro/_macro.html.twig' as macro %}
 
 {% block title %}
-    {{ macro.icon('tachometer-alt') }}
+    {{ macro.icon('clipboard-list') }}
     {{ 'caption.logviewer'|trans }}
 {% endblock title %}
 
@@ -15,9 +15,19 @@
 {% block main %}
 
     <table class="table table-striped">
+        <tr>
+            <th scope="col">{{ __('label.id') }}</th>
+            <th scope="col">{{ __('label.level') }}</th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col">{{ __('label.message') }}</th>
+            <th scope="col"></th>
+            <th scope="col">{{ __('label.timestamp') }}</th>
+        </tr>
+
     {% for item in items %}
     <tr>
-        <th scope="row">
+        <th scope="row" class="text-nowrap">
             № {{ item.id }}
         </th>
         <td>
@@ -25,8 +35,8 @@
         </td>
         <td>
             <div class="dropdown">
-                <button class="btn btn-link dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    {{ macro.icon('cog') }} Request
+                <button class="btn btn-tertiary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    {{ macro.icon('cog') }} {{ __('label.request') }}
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="width: 400px; font-size: 80%;">
                     <ul class="pl-4 pr-3 my-0">
@@ -39,8 +49,8 @@
         </td>
         <td>
             <div class="dropdown">
-                <button class="btn btn-link dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    {{ macro.icon('road') }} Trace
+                <button class="btn btn-tertiary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    {{ macro.icon('road') }} {{ __('label.trace') }}
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="width: 500px; font-size: 80%;">
                     <ul class="pl-4 pr-3 my-0">
@@ -52,12 +62,28 @@
             </div>
         </td>
         <td>
-            {{ item.message }}
+            {{ item.message|replace(item.context|default([])) }}
         </td>
         <td>
+            {% if item.context is iterable %}
+            <div class="dropdown">
+                <button class="btn btn-tertiary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    {{ macro.icon('project-diagram') }} {{ __('label.context') }}
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="width: 500px; font-size: 80%;">
+                    <ul class="pl-4 pr-3 my-0">
+                        {% for key, line in item.context %}
+                            <li><strong>{{ key }}:</strong> <code>{{ line|join(', ') }}</code></li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+            {% endif %}
+        </td>
+        <td class="text-nowrap">
             {{ item.createdAt|date('Y-m-d H:i:s') }}<br>
             {% if item.user %}
-                {{ item.user.username }}<small>(№ {{ item.user.id }})</small>
+                {{ __('label.user') }}: {{ item.user.username }}<small>(№ {{ item.user.id }})</small>
             {% else %}
                 -
             {% endif %}
@@ -68,7 +94,4 @@
 
     {{ pager(items, template = '@bolt/helpers/_pager_bootstrap.html.twig', class="justify-content-center") }}
 
-
 {% endblock %}
-
-
