--- a/templates/content/_fields.html.twig
+++ b/templates/content/_fields.html.twig
@@ -4,7 +4,7 @@
          aria-labelledby="{{ group|slug }}-tab">
         {% for key, fielddefinition in record.definition.fields|filter(fielddefinition => fielddefinition.group == group) %}
             {% if record.hasField(key) %}
-                {% set field = record.getField(key)|translated(currentlocale) %}
+                {% set field = record.getField(key) %}
             {% else %}
                 {% set field = field_factory(key, fielddefinition) %}
             {% endif %}
