Tiny modifications to image field and input placeholders.

--- a/assets/scss/init/_base.scss
+++ b/assets/scss/init/_base.scss
@@ -58,3 +58,7 @@ input.flatpickr-input[disabled] {
   background-color: $input-disabled-bg;
   color: $input-disabled-color;
 }
+
+input::placeholder {
+  font-style: italic;
+}
