--- a/assets/scss/init/_variables.scss
+++ b/assets/scss/init/_variables.scss
@@ -48,6 +48,7 @@ $custom-range-thumb-active-bg:          var(--primary-400);
 
 $input-disabled-bg:                     #f0f3f6;
 $input-disabled-color:                  #777;
+$input-placeholder-color:               #aaa;
 
 $input-btn-focus-width:                 0.15rem;
 $input-btn-focus-box-shadow:            0 0 0 $input-btn-focus-width var(--primary-200);
