Output fields in the order as specified in ContentType defnition

--- a/templates/helpers/_fields.twig
+++ b/templates/helpers/_fields.twig
@@ -40,12 +40,12 @@
     {% endapply -%}
 
     {# SECTION 2: LOOPING AND ITERATION - The actual looping is done here. #}
-    {% for field in record.fields|filter(field => field.name not in omittedkeys) %}
+    {% for name, definition in record.definition.fields|filter(definition => definition.slug not in omittedkeys) %}
 
+        {% set field = record.field(name) %}
         {% set type = field|type %}
 
-        {# Fields that are considered 'common': 'html', 'markdown', 'textarea',
-           'text', 'image', 'video' and 'imagelist' #}
+        {# Fields that are considered 'common': 'html', 'markdown', 'textarea', 'text', 'image', 'video' #}
         {% if common|default(true) and (type not in exclude|default([])) %}
             {{ block('common_fields') }}
         {% endif %}
@@ -58,16 +58,13 @@
         {# Finally, the collections, filelists and imagelists #}
         {% if type in ['collection', 'filelist', 'imagelist', 'set'] and (type not in exclude|default([])) %}
 
-            {# @todo Make set return _just_ the array of fields for `.value` and `getValue()`. See issue #822 #}
-            {# note: For sets we need `field.value.fields`, hence the seemingly obtuse way to iterate over them #}
             {% for field in field.value %}
                 {% set type = field.type %}
                 {{ block('common_fields') }}
                 {{ block('extended_fields') }}
             {% endfor %}
+
         {% endif %}
-
-
 
     {% endfor %}
 
