--- a/public/theme/skeleton/partials/_aside.twig
+++ b/public/theme/skeleton/partials/_aside.twig
@@ -50,7 +50,7 @@
         Lastly, "path('listing', {'contentTypeSlug': ct.slug})" will output something like '/pages',
         effectively creating a working link to that contenttpye's listing page. #}
 
-    {% for ct in config.get('contenttypes') if not ct.viewless|default(false) %}
+    {% for ct in config.get('contenttypes')|filter(ct => not ct.viewless) %}
 
         {% setcontent records = ct.slug ~ "/latest/3" %}
 
