Show correct Slug prefix when creating new content

--- a/templates/_partials/fields/slug.html.twig
+++ b/templates/_partials/fields/slug.html.twig
@@ -1,10 +1,11 @@
 {% extends '@bolt/_partials/fields/_base.html.twig' %}
 
 {% block field %}
+{% set prefix = '/' ~ record.definition.singular_slug ~ '/' %}
     <editor-slug
         :value='{{ value|json_encode }}'
         :name='{{ name|json_encode }}'
-        :prefix='{{ field.slugPrefix|json_encode }}'
+        :prefix='{{ prefix|json_encode }}'
         :field-class='{{ class|json_encode }}'
         :generate='{{ field.slugUseFields|join(', ')|json_encode }}'
         :labels='{{ {
