--- a/templates/_partials/fields/slug.html.twig
+++ b/templates/_partials/fields/slug.html.twig
@@ -10,6 +10,7 @@
         :field-class='{{ class|json_encode }}'
         :generate='{{ field.slugUseFields|join(',')|json_encode }}'
         :labels='{{ {
+            'button_unlocked': 'slug.button_unlocked'|trans,
             'button_locked': 'slug.button_locked'|trans,
             'button_edit': 'slug.button_edit'|trans,
             'generate_from': 'slug.generate_from'|trans,
